sealed-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sealed-secrets-web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "61.77.247.3/32"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - sealed-secrets.archainia.app
      secretName: archainia-wildcard-tls

  rules:
    - host: sealed-secrets.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sealed-secrets-web
                port:
                  number: 80
